[project]
name = "fetch-pubmed-data"
version = "0.1.4"
description = "A Python package to fetch data from research papers from Pubmed based on query"
authors = [
    {name = "Palash Shrote",email = "palash.shrote.58@gmail.com"}
]
readme = "readme_pipy.md"
requires-python = ">=3.12"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "fetch_pubmed_data", from = "src"}]
[tool.poetry.scripts]
get-papers-list = "src.fetch_pubmed_data.cli:fetch_data"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
